# python-syllables

./: .editorconfig  .gitignore  .prospector.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_syllables.py
.github/: dependabot.yml
.github/workflows/: pypi-publish.yml  pypi-test-publish.yml  python-ci.yml  python-lint.yml  python-release.yml
src/syllables/: __init__.py
syllable/: __init__.py
syllables/: __init__.py
tests/: test_syllables.py
