[tool.commitizen]
version = "1.0.7"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"
version_files = [
  "pyproject.toml:version",
]

[tool.poetry]
name = "syllables"
version = "1.0.7"
description = "A Python package for estimating the number of syllables in a word."
authors = ["David L. Day <david@davidlday.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/prosegrinder/python-syllables"
repository = "https://github.com/prosegrinder/python-syllables"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[tool.poetry.dependencies]
python = "^3.7.2"
importlib-metadata = "^5.1.0"
cmudict = "^1.0.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
