[tool.commitizen]
version = "1.0.9"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"
version_files = [
  "pyproject.toml:version",
]

[project]
name = "syllables"
version = "1.0.9"
description = "A Python package for estimating the number of syllables in a word."
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "David L. Day", email = "david@davidlday.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "cmudict>=1.0.11",
    "importlib-metadata>=5.1,<7.0"
]

[project.urls]
homepage = "https://github.com/prosegrinder/python-syllables"
repository = "https://github.com/prosegrinder/python-syllables"
"Bug Tracker" = "https://github.com/prosegrinder/python-syllables/issues"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.8"
black = ">=22.12,<24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
