[project]
name = "syllables"
dynamic = ["version", "classifiers"]
description = "A Python package for estimating the number of syllables in a word."
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "David L. Day", email = "david@davidlday.com" }
]
dependencies = [
    "cmudict>=1.0.11",
    "importlib-metadata>=5.1,<7.0"
]

[project.urls]
homepage = "https://github.com/prosegrinder/python-syllables"
repository = "https://github.com/prosegrinder/python-syllables"
"Bug Tracker" = "https://github.com/prosegrinder/python-syllables/issues"

[tool.commitizen]
version = "1.1.2"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"
version_files = [
  "pyproject.toml:version",
]

[tool.poetry]
version = "1.1.2"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pylint = "^3.3.9"
black = ">=22.12,<26.0"
mypy = "^1.18.2"
bandit = "^1.8.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
