[bdist_wheel]
universal = 1

[metadata]
name = syllables
version = file: syllables/VERSION
author = David L. Day
author_email = dday376@gmail.com
description = A Python package for estimating the number of syllables in a word.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/prosegrinder/python-syllables
project_urls =
  Bug Tracker = https://github.com/prosegrinder/python-syllables/issues
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Natural Language :: English
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
